# wealth-wars-landing

./: .gitignore  .spark-initial-sha  Anchor.toml  BACKEND_SERVICE_COMPLETE.md  BOT_DEPLOYMENT_SUCCESS.md  Cargo.toml  DEMO-SYNC.md  Dockerfile  FIX_BOT_ERRORS.md  LOTTO_UI_COMPLETE.md  LOTTO_UI_FEATURES.md  LOTTO_UI_VISUAL.txt  MERGE_SUCCESS.md  MERGE_TO_MAIN.md  NEXT_STEPS.md  PRD.md  PRODUCTION_DEPLOYMENT.md  README.md  SERVICE_MANAGEMENT.md  SERVICE_SUMMARY.md  THIS_SUMMARY.md  auto-deploy.txt  docker-compose.yml  ecosystem.config.js  index.html  package-lock.json  package.json  railway.toml  render.yaml  runtime.config.json  setup.sh  tailwind.config.js  trigger.txt  vercel.json  vite.config.ts
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.github/workflows/: auto-sync-demo.yml  deploy.yml  sync-demo.yml
deployment/: Dockerfile.backend  wealth-wars-backend.service
docs/: Core-Game-Loop—Wealth-Wars.docx  lotto-env.md  lotto-onchain-plan.md  lotto-program-architecture.md  phase3-backend-integration.md
programs/lotto/: Cargo.toml
public/: CNAME  sign.html
public/demo/: README.txt  index.html
scripts/: generate-core-loop-doc.mjs  generate-og.mjs  service.sh  setup-telegram-webhook.js
solana-release/: version.yml
src/: App.tsx  index.css  main.css  main.tsx
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
tests/: lotto-runner.mjs  lotto.mocha.cjs  lotto.ts
(+33 files in other folders)
