[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", default-features = false, features = ["init-if-needed", "event-cpi"] }
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }

[patch.crates-io]
anchor-syn = { path = "vendor/anchor-syn" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
